# robotframework-rpycremote

./: .gitignore  CODEOWNERS  LICENSE.txt  README.rst  RPyCRemoteServer.py  RPyCRobotRemoteClient.py  RPyCRobotRemoteServer.py  pyproject.toml  setup.py  test_client.py  test_service.py
.github/: FUNDING.yml
.github/workflows/: pipeline.yml  publish-to-pypi.yml
RPyCRobotRemote/: RPyCRobotRemoteClient.py  RPyCRobotRemoteServer.py  __init__.py
test/: Model.py  client.py  provider.py  server.py  test.robot
