[build-system]
requires = ['setuptools>=45', 'setuptools_scm[toml]>=6.2']

[project]
name = 'robotframework-rpycremote'
authors = [
    {name = 'René Lehfeld', email = '54720674+rlehfeld@users.noreply.github.com'},
]
description = 'Robot Framework Remote Library based on RPyC-NG'
requires-python = '>=3.10'
license = {text = 'MIT'}
keywords = ['robotframework', 'robot-framework', 'rpyc']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Environment :: Other Environment',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
  'robotframework>=6.1',
  #'rpyc-ng>=7.0.0',
  'rpyc>=6.0.2',
]
dynamic = ['version', 'readme']

[project.urls]
'Homepage' = 'https://github.com/rlehfeld/robotframework-rpycremote'
'Bug Reports' = 'https://github.com/rlehfeld/robotframework-rpycremote/issues'
'Source' = 'https://github.com/rlehfeld/robotframework-rpycremote/'

[tool.setuptools]
packages = ['RPyCRobotRemote']

[tool.setuptools.dynamic]
readme = {file = ['README.rst']}

[tool.setuptools_scm]
write_to = 'RPyCRobotRemote/_version.py'
